--- a/test/fixtures/routes.yml
+++ b/test/fixtures/routes.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
+  name: MyString
   price: 9.99
   user_id: 1
   gateway_id: 1
 
 two:
+  name: MyString
   price: 9.99
   user_id: 1
   gateway_id: 1
