Change postgre user to own the DB

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,8 @@ development:
 test:
   <<: *default
   database: pluie_test
+  username: pluie_tester
+  password: tester
 
 staging:
   <<: *default
