--- a/test/fixtures/gateways.yml
+++ b/test/fixtures/gateways.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  id: 1
-  name: MyString
-  price: 9.99
+  name: GatewayOne
+  price: 0.0030
 
 two:
-  id: 2
-  name: MyString
-  price: 9.99
+  name: GatewayTwo
+  price: 0.0050
