--- a/test/fixtures/observers.yml
+++ b/test/fixtures/observers.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  number: MyString
-  active: false
+  number: 5354031441
+  active: true
 
 two:
-  number: MyString
+  number: 5352644047
   active: false
