--- a/test/fixtures/lists.yml
+++ b/test/fixtures/lists.yml
@@ -1,16 +1,18 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: random3
+  name: list_1
+  user: one
 
 two:
-  name: random500
+  name: list_2
+  user: two
 
-list_1000_for_one:
+list_1k_for_one:
   name: random1000
   user: one
 
-list_5000_for_one:
+list_5k_for_one:
   name: random5000
   user: one
 
