--- a/test/fixtures/bulk_messages.yml
+++ b/test/fixtures/bulk_messages.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  message: MyText
+  message: Bulk1
+  route: one
+  user: one
 
 two:
   message: MyText
