--- a/test/fixtures/lists.yml
+++ b/test/fixtures/lists.yml
@@ -1,29 +1,37 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: list_1
+  name: random3
   user: one
 
 two:
-  name: list_2
+  name: six_numbers
   user: two
 
-list500:
-  name: list_500
+dup:
+  name: some-duplicates
+  user: one
+
+l_3:
+  name: random3
   user: two
 
-list_1k:
-  name: random1000
+l_500:
+  name: "500"
   user: two
 
-list_5k:
-  name: random5000
+l_1k:
+  name: "1000"
   user: two
 
-admin_list:
-  name: admin_numbers
+list_5000:
+  name: "5000"
   user: two
 
-list_10K:
-  name: random10000
+list_admins:
+  name: admins
+  user: two
+
+list_10000:
+  name: "10000"
   user: two
