--- a/test/fixtures/bulk_messages.yml
+++ b/test/fixtures/bulk_messages.yml
@@ -9,3 +9,9 @@ bulk:
   message: Bulk2
   route: bulk
   user: two
+
+multi_lists:
+  message: bulk lists
+  route: bulk
+  user: two
+  lists: list_admins, l_3, two
