Test suite refactoring **Add fixtures to avoid manual execution of after_callbacks **Add services objects test for message sending **Set fixed values for collections generated randomly to gain speed **Decrease time needed to generate a cubacel_random_number **Use a single random instance **Use shoulda context to narrow test setup to specific tests **Use BigDecimal with digit limit to perform operations with credits & debits

--- a/test/fixtures/bulk_messages.yml
+++ b/test/fixtures/bulk_messages.yml
@@ -4,14 +4,10 @@ one:
   message: Bulk1
   route: one
   user: one
+  lists: one
 
 bulk:
   message: Bulk2
   route: bulk
   user: two
-
-multi_lists:
-  message: bulk lists
-  route: bulk
-  user: two
-  lists: list_admins, l_3, two
+  lists: two
