--- a/test/fixtures/single_messages.yml
+++ b/test/fixtures/single_messages.yml
@@ -2,12 +2,14 @@
 
 one:
   message: message-one
-  number: 5354031441
+  number: "5350000001"
+  gsm_numbers: one
   user: one
   route: one
 
-two:
+with_three_numbers:
   message: message-two
-  number: "5358888888 5354031441"
+  number: "5350000001 5350000002 5350000003"
+  gsm_numbers: one, two, three
   user: one
   route: one
