--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-
+pluie_development
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
@@ -31,3 +31,8 @@ TODO
 
 # Generated assets
 /public/assets
+
+#.orig file
+*.orig
+/vendor/cache
+.idea
