--- a/test/fixtures/api_settings.yml
+++ b/test/fixtures/api_settings.yml
@@ -3,3 +3,7 @@
 about:
    api_key: 561b7ec89b0ca61b250815b24e398ae
    user_id: 5
+
+aboutAdmin:
+   api_key: 561b7ec89b0ca61b250815b24e408a1
+   user_id: 40
