--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -39,3 +39,9 @@ apiu:
     <<: *minimal
     email: ale5@gmail.com
     id: 5
+
+adminApi:
+    <<: *minimal
+    email: admin40@gmail.com
+    id: 40
+    admin: true
