--- a/test/fixtures/gsm_numbers_lists.yml
+++ b/test/fixtures/gsm_numbers_lists.yml
@@ -3,8 +3,14 @@ gsm1:
     gsm_number_id: 10
 
 
-<% 5358880001.upto(5358881001) do |i| %>
+<% 5358880001.upto(5358880022) do |i| %>
 number_<%= i %>:
   gsm_number_id: <%= i %>
   list_id: 100
+<% end %>
+
+<% 5358880001.upto(5358880022) do |i| %>
+number_<%= i %>:
+  gsm_number_id: <%= i %>
+  list_id: 9
 <% end %>
