test in controller bulk message api rest

--- a/test/fixtures/api_settings.yml
+++ b/test/fixtures/api_settings.yml
@@ -7,3 +7,7 @@ about:
 aboutAdmin:
    api_key: 561b7ec89b0ca61b250815b24e408a1
    user_id: 40
+
+aboutnotcredit:
+   api_key: 56yb7ec89b0ca61b250815b24e408n1
+   user_id: 41
