--- a/test/fixtures/lists.yml
+++ b/test/fixtures/lists.yml
@@ -35,6 +35,7 @@ list_api2:
     name: 'five'
     user_id: 5
     id: 9
+    opened: false
 
 list_api4:
     name: 'six'
@@ -42,3 +43,8 @@ list_api4:
     id: 100
     opened: false
 
+listBulk:
+    name: bulk
+    user_id: 41
+    id: 102
+    opened: false
