--- a/test/fixtures/gsm_numbers_lists.yml
+++ b/test/fixtures/gsm_numbers_lists.yml
@@ -18,3 +18,9 @@ number_<%= i %>:
 gsmfour:
     list_id: 8
     gsm_number_id: 10
+
+<% 5358890001.upto(5358890226) do |i| %>
+number_<%= i %>:
+  gsm_number_id: <%= i %>
+  list_id: 102
+<% end %>
