--- a/test/fixtures/routes.yml
+++ b/test/fixtures/routes.yml
@@ -3,6 +3,8 @@
 barebones: &minimal
   name: Gold
   price: 0.01
+  gateway_id: 50
+  user_id: 5
 
 one: &user_one
   <<: *minimal
@@ -52,3 +54,4 @@ routeBulkNotCredit:
   gateway_id: 50
   id: 26
   price: 0.5
+  name: GoldApiai
